# AI_Video_Editor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/sample/: README.md
src/video_editor/: __init__.py  beat_detector.py  clip_manager.py  compat.py  config.py  editor.py  main.py  types.py  ui.py
src/video_editor/web/: __init__.py  app.py
tests/: __init__.py  conftest.py  helpers.py  test_beat_detector.py  test_clip_manager.py  test_editor.py
