[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-editor"
version = "0.1.0"
description = "AI-assisted short-form video editor that syncs clips to music beats"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Video Editor" }]
dependencies = [
    "moviepy>=1.0.3,<2.0.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.11",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pyright>=1.1",
    "black>=24.0",
]

[project.scripts]
video-editor = "video_editor.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
